Updated ClassServiceTest